force-app/main/default/objects/P__c/fields/FreeText_MLP__c.field-meta.xml
<CustomField>
    <fullName>FreeText_MLP__c</fullName>
    <label>Motor LT Part Number Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>