force-app/main/default/objects/P__c/fields/FreeText_MP__c.field-meta.xml
<CustomField>
    <fullName>FreeText_MP__c</fullName>
    <label>MLC Part Number Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>