force-app/main/default/objects/P__c/fields/FreeText_MU__c.field-meta.xml
<CustomField>
    <fullName>FreeText_MU__c</fullName>
    <label>Motor UT Serial # Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>