force-app/main/default/objects/P__c/fields/FreeText_MU_desc__c.field-meta.xml
<CustomField>
    <fullName>FreeText_MU_desc__c</fullName>
    <label>Motor UT Description Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>