force-app/main/default/objects/P__c/fields/FreeText_MUP__c.field-meta.xml
<CustomField>
    <fullName>FreeText_MUP__c</fullName>
    <label>Motor UT Part Number Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>