force-app/main/default/objects/P__c/fields/FreeText_P2_desc__c.field-meta.xml
<CustomField>
    <fullName>FreeText_P2_desc__c</fullName>
    <label>Pump 2 Description Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>