force-app/main/default/objects/P__c/fields/FreeText_P2P__c.field-meta.xml
<CustomField>
    <fullName>FreeText_P2P__c</fullName>
    <label>Pump 2 Part Number Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>