force-app/main/default/objects/P__c/fields/FreeText_P3P__c.field-meta.xml
<CustomField>
    <fullName>FreeText_P3P__c</fullName>
    <label>Pump 3 Part Number Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>