force-app/main/default/objects/P__c/fields/FreeText_P__c.field-meta.xml
<CustomField>
    <fullName>FreeText_P__c</fullName>
    <label>Pump Serial # (1) Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>