force-app/main/default/objects/P__c/fields/FreeText_RP__c.field-meta.xml
<CustomField>
    <fullName>FreeText_RP__c</fullName>
    <label>Sensor Part Number Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>