force-app/main/default/objects/P__c/fields/FreeText_SL__c.field-meta.xml
<CustomField>
    <fullName>FreeText_SL__c</fullName>
    <label>Seal LT Serial # Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>