force-app/main/default/objects/P__c/fields/FreeText_SL_desc__c.field-meta.xml
<CustomField>
    <fullName>FreeText_SL_desc__c</fullName>
    <label>Seal LT Description Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>