force-app/main/default/objects/P__c/fields/FreeText_SLP__c.field-meta.xml
<CustomField>
    <fullName>FreeText_SLP__c</fullName>
    <label>Seal LT Part Number Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>