force-app/main/default/objects/P__c/fields/FreeText_SU__c.field-meta.xml
<CustomField>
    <fullName>FreeText_SU__c</fullName>
    <label>Seal UT Serial # Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>