force-app/main/default/objects/P__c/fields/FreeText_SUP__c.field-meta.xml
<CustomField>
    <fullName>FreeText_SUP__c</fullName>
    <label>Seal UT Part Number Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>