force-app/main/default/objects/P__c/fields/GE_AL_API_Regional_Identifier__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_API_Regional_Identifier__c</fullName>
    <label>API# or Regional Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>