force-app/main/default/objects/P__c/fields/GE_AL_Below_Well_Head_B_C__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Below_Well_Head_B_C__c</fullName>
    <label>Below Well Head B-C</label>
    <length>100</length>
    <type>Text</type>
</CustomField>