force-app/main/default/objects/P__c/fields/GE_AL_Cable_2_Splices_Condition__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Cable_2_Splices_Condition__c</fullName>
    <label>Cable 2 Splices Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>