force-app/main/default/objects/P__c/fields/GE_AL_Cable_MLC_Only_A_GRND__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Cable_MLC_Only_A_GRND__c</fullName>
    <label>Cable &amp; MLC (Only) A-GRND</label>
    <length>100</length>
    <type>Text</type>
</CustomField>