force-app/main/default/objects/P__c/fields/GE_AL_Cable_MLC_Only_B_C__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Cable_MLC_Only_B_C__c</fullName>
    <label>Cable &amp; MLC (Only) B-C</label>
    <length>100</length>
    <type>Text</type>
</CustomField>