force-app/main/default/objects/P__c/fields/GE_AL_Cap_Line_Tube_Type_Size_2__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Cap_Line_Tube_Type_Size_2__c</fullName>
    <label>Cap Line Tube Type Size 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>