force-app/main/default/objects/P__c/fields/GE_AL_Comments1__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Comments1__c</fullName>
    <label>Surface Readings Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>