force-app/main/default/objects/P__c/fields/GE_AL_Comments__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Comments__c</fullName>
    <label>Pull Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>