force-app/main/default/objects/P__c/fields/GE_AL_Controller__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Controller__c</fullName>
    <label>Controller #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>