force-app/main/default/objects/P__c/fields/GE_AL_Distance_from_VSD_SWB__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Distance_from_VSD_SWB__c</fullName>
    <label>Distance from VSD/SWB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>