force-app/main/default/objects/P__c/fields/GE_AL_From_Surface_C_GRND__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_From_Surface_C_GRND__c</fullName>
    <label>From Surface C-GRND</label>
    <length>100</length>
    <type>Text</type>
</CustomField>