force-app/main/default/objects/P__c/fields/GE_AL_Gas_MCF__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Gas_MCF__c</fullName>
    <label>Gas (MCF)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>