force-app/main/default/objects/P__c/fields/GE_AL_Gassy__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Gassy__c</fullName>
    <label>Gassy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>