force-app/main/default/objects/P__c/fields/GE_AL_Generator__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Generator__c</fullName>
    <label>Generator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>