force-app/main/default/objects/P__c/fields/GE_AL_Generator_Type__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Generator_Type__c</fullName>
    <label>Generator Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>P2L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>