force-app/main/default/objects/P__c/fields/GE_AL_Genset_Provider__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Genset_Provider__c</fullName>
    <label>Genset Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>