force-app/main/default/objects/P__c/fields/GE_AL_Incorrect_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Incorrect_Install_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incorrect Install Date</label>
    <type>Checkbox</type>
</CustomField>