force-app/main/default/objects/P__c/fields/GE_AL_Input_Power_B_C__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Input_Power_B_C__c</fullName>
    <label>Input Power B-C</label>
    <length>100</length>
    <type>Text</type>
</CustomField>