force-app/main/default/objects/P__c/fields/GE_AL_MLC_Only_If_Removed_A_B__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_MLC_Only_If_Removed_A_B__c</fullName>
    <label>MLC Only (If Removed) A-B</label>
    <length>100</length>
    <type>Text</type>
</CustomField>