force-app/main/default/objects/P__c/fields/GE_AL_MLC_Only_If_Removed_B_C__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_MLC_Only_If_Removed_B_C__c</fullName>
    <label>MLC Only (If Removed) B-C</label>
    <length>100</length>
    <type>Text</type>
</CustomField>