force-app/main/default/objects/P__c/fields/GE_AL_Motor_1_B_GRND__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Motor_1_B_GRND__c</fullName>
    <label>Motor 1 B-GRND</label>
    <length>100</length>
    <type>Text</type>
</CustomField>