force-app/main/default/objects/P__c/fields/GE_AL_Motor_2_C_GRND__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Motor_2_C_GRND__c</fullName>
    <label>Motor 2 C-GRND</label>
    <length>100</length>
    <type>Text</type>
</CustomField>