force-app/main/default/objects/P__c/fields/GE_AL_Motor_3_A_B__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Motor_3_A_B__c</fullName>
    <label>Motor 3 A-B</label>
    <length>100</length>
    <type>Text</type>
</CustomField>