force-app/main/default/objects/P__c/fields/GE_AL_Motor_3_A_C__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Motor_3_A_C__c</fullName>
    <label>Motor 3 A-C</label>
    <length>100</length>
    <type>Text</type>
</CustomField>