force-app/main/default/objects/P__c/fields/GE_AL_Motor_shroud_Length__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Motor_shroud_Length__c</fullName>
    <label>Motor shroud Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>