force-app/main/default/objects/P__c/fields/GE_AL_OIL_BPD__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_OIL_BPD__c</fullName>
    <label>OIL (BPD)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>