force-app/main/default/objects/P__c/fields/GE_AL_Restart_Time__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Restart_Time__c</fullName>
    <label>Restart Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>