force-app/main/default/objects/P__c/fields/GE_AL_Sensor_Display__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Sensor_Display__c</fullName>
    <label>Sensor Display #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>