force-app/main/default/objects/P__c/fields/GE_AL_Sensor_Serial__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Sensor_Serial__c</fullName>
    <label>Sensor Serial #</label>
    <length>150</length>
    <type>Text</type>
</CustomField>