force-app/main/default/objects/P__c/fields/GE_AL_Shut_In__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Shut_In__c</fullName>
    <label>Shut-In</label>
    <length>100</length>
    <type>Text</type>
</CustomField>