force-app/main/default/objects/P__c/fields/GE_AL_Slugging__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Slugging__c</fullName>
    <label>Slugging</label>
    <length>100</length>
    <type>Text</type>
</CustomField>