force-app/main/default/objects/P__c/fields/GE_AL_Static_PSI__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Static_PSI__c</fullName>
    <label>Static PSI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>