force-app/main/default/objects/P__c/fields/GE_AL_Static_Temp__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Static_Temp__c</fullName>
    <label>Static Temp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>