force-app/main/default/objects/P__c/fields/GE_AL_Static_Temp_Unit__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Static_Temp_Unit__c</fullName>
    <label>Static Temp Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>Ra</fullName>
            </value>
            <value>
                <fullName>K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>