force-app/main/default/objects/P__c/fields/GE_AL_Stepdown_XFMR_KVA__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Stepdown_XFMR_KVA__c</fullName>
    <label>Stepdown XFMR KVA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>