force-app/main/default/objects/P__c/fields/GE_AL_Temperature__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Temperature__c</fullName>
    <label>Temperature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>