force-app/main/default/objects/P__c/fields/GE_AL_Temperature_Unit__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Temperature_Unit__c</fullName>
    <label>Temperature Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>⁰C</fullName>
            </value>
            <value>
                <fullName>⁰F</fullName>
            </value>
            <value>
                <fullName>⁰Ra</fullName>
            </value>
            <value>
                <fullName>K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>