force-app/main/default/objects/P__c/fields/GE_AL_Utility_Company__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Utility_Company__c</fullName>
    <label>Utility Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>