force-app/main/default/objects/P__c/fields/GE_AL_Volt_No_Load_A_C__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Volt_No_Load_A_C__c</fullName>
    <label>Volt No Load A-C</label>
    <length>100</length>
    <type>Text</type>
</CustomField>