force-app/main/default/objects/P__c/fields/GE_AL_Weather_Conditions__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Weather_Conditions__c</fullName>
    <label>Weather Conditions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>