force-app/main/default/objects/P__c/fields/GE_AL_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>GE_AL_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Pulls</relationshipLabel>
    <relationshipName>Pulls</relationshipName>
    <type>Lookup</type>
</CustomField>