force-app/main/default/objects/P__c/fields/GL__c.field-meta.xml
<CustomField>
    <fullName>GL__c</fullName>
    <label>Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>