force-app/main/default/objects/P__c/fields/H__c.field-meta.xml
<CustomField>
    <fullName>H__c</fullName>
    <label>Motor Shroud Hanger</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intake - Sealed</fullName>
            </value>
            <value>
                <fullName>Intake - Not Sealed</fullName>
            </value>
            <value>
                <fullName>Encapsulated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>