force-app/main/default/objects/P__c/fields/HL__c.field-meta.xml
<CustomField>
    <fullName>HL__c</fullName>
    <label>Hours on Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>