force-app/main/default/objects/P__c/fields/HTL__c.field-meta.xml
<CustomField>
    <fullName>HTL__c</fullName>
    <label>HT (Lead)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>