force-app/main/default/objects/P__c/fields/I1__c.field-meta.xml
<CustomField>
    <fullName>I1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake Gas 1 Serial #</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Pulls (Intake Gas 1 Serial #)</relationshipLabel>
    <relationshipName>Pulls_IntkGs_1</relationshipName>
    <type>Lookup</type>
</CustomField>