force-app/main/default/objects/P__c/fields/I1SP__c.field-meta.xml
<CustomField>
    <fullName>I1SP__c</fullName>
    <label>Intake Gas 1 Shaft Play</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>