force-app/main/default/objects/P__c/fields/I2__c.field-meta.xml
<CustomField>
    <fullName>I2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake Gas 2 Serial #</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Pulls (Intake Gas 2 Serial #)</relationshipLabel>
    <relationshipName>Pulls_IntkGas_2</relationshipName>
    <type>Lookup</type>
</CustomField>